objects/eventXL_RegistrationTransactios__x.object
<CustomObject>
    <description>eventXL_RegistrationTransactios</description>
    <externalDataSource>Hybrid_Data_Pipeline</externalDataSource>
    <externalName>eventXL_RegistrationTransactios</externalName>
    <fields>
        <fullName>CompanyId__c</fullName>
        <description>CompanyId</description>
        <externalDeveloperName>CompanyId</externalDeveloperName>
        <label>CompanyId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ContactId</description>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RegistrationTransaction</relationshipLabel>
        <relationshipName>RegistrationTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactMasterKey__c</fullName>
        <description>ContactMasterKey</description>
        <externalDeveloperName>ContactMasterKey</externalDeveloperName>
        <label>ContactMasterKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactRegistrationId__c</fullName>
        <description>ContactRegistrationId</description>
        <externalDeveloperName>ContactRegistrationId</externalDeveloperName>
        <label>ContactRegistrationId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTransactionId__c</fullName>
        <description>ContactTransactionId</description>
        <externalDeveloperName>ContactTransactionId</externalDeveloperName>
        <label>ContactTransactionId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCProductID</description>
        <externalDeveloperName>SFDCProductID</externalDeveloperName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>RegistrationTransaction</relationshipLabel>
        <relationshipName>RegistrationTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>ExternalID</description>
        <externalDeveloperName>ExternalID</externalDeveloperName>
        <label>ExternalID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>IsActive</description>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>IsActive</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVerified__c</fullName>
        <description>IsVerified</description>
        <externalDeveloperName>IsVerified</externalDeveloperName>
        <label>IsVerified</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVoided__c</fullName>
        <description>IsVoided</description>
        <externalDeveloperName>IsVoided</externalDeveloperName>
        <label>IsVoided</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalAmount__c</fullName>
        <description>OriginalAmount</description>
        <externalDeveloperName>OriginalAmount</externalDeveloperName>
        <label>OriginalAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductMasterKey__c</fullName>
        <description>ProductMasterKey</description>
        <externalDeveloperName>ProductMasterKey</externalDeveloperName>
        <label>ProductMasterKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PromoCodeId__c</fullName>
        <description>PromoCodeId</description>
        <externalDeveloperName>PromoCodeId</externalDeveloperName>
        <label>PromoCodeId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoCode__c</fullName>
        <description>PromoCode</description>
        <externalDeveloperName>PromoCode</externalDeveloperName>
        <label>PromoCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegistrationKey__c</fullName>
        <description>RegistrationKey</description>
        <externalDeveloperName>RegistrationKey</externalDeveloperName>
        <label>RegistrationKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCContactID__c</fullName>
        <description>SFDCContactID</description>
        <externalDeveloperName>SFDCContactID</externalDeveloperName>
        <label>SFDCContactID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCRegistrationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCRegistrationId</description>
        <externalDeveloperName>SFDCRegistrationId</externalDeveloperName>
        <label>SFDCRegistrationId</label>
        <referenceTo>Registration__c</referenceTo>
        <relationshipLabel>RegistrationTransaction</relationshipLabel>
        <relationshipName>RegistrationTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceKey__c</fullName>
        <description>SourceKey</description>
        <externalDeveloperName>SourceKey</externalDeveloperName>
        <label>SourceKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxTotalAmount__c</fullName>
        <description>TaxTotalAmount</description>
        <externalDeveloperName>TaxTotalAmount</externalDeveloperName>
        <label>TaxTotalAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxableAmount__c</fullName>
        <description>TaxableAmount</description>
        <externalDeveloperName>TaxableAmount</externalDeveloperName>
        <label>TaxableAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>TotalAmount</description>
        <externalDeveloperName>TotalAmount</externalDeveloperName>
        <label>TotalAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransInsertDate__c</fullName>
        <description>TransInsertDate</description>
        <externalDeveloperName>TransInsertDate</externalDeveloperName>
        <label>TransInsertDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransUpdateDate__c</fullName>
        <description>TransUpdateDate</description>
        <externalDeveloperName>TransUpdateDate</externalDeveloperName>
        <label>TransUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionTypeCode__c</fullName>
        <description>TransactionTypeCode</description>
        <externalDeveloperName>TransactionTypeCode</externalDeveloperName>
        <label>TransactionTypeCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitAmount__c</fullName>
        <description>UnitAmount</description>
        <externalDeveloperName>UnitAmount</externalDeveloperName>
        <label>UnitAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VerifyCode__c</fullName>
        <description>VerifyCode</description>
        <externalDeveloperName>VerifyCode</externalDeveloperName>
        <label>VerifyCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyDate__c</fullName>
        <description>VerifyDate</description>
        <externalDeveloperName>VerifyDate</externalDeveloperName>
        <label>VerifyDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VoidDate__c</fullName>
        <description>VoidDate</description>
        <externalDeveloperName>VoidDate</externalDeveloperName>
        <label>VoidDate</label>
        <type>DateTime</type>
    </fields>
    <label>RegistrationTransaction</label>
    <pluralLabel>RegistrationTransaction</pluralLabel>
</CustomObject>